fix themes row spacing

--- a/app/assets/stylesheets/themes.scss
+++ b/app/assets/stylesheets/themes.scss
@@ -4,7 +4,7 @@
 
 .themesRow {
   width: 1200px;
-  margin: 25px auto 95px;
+  margin: 25px 230px 95px;
 }
 
 .theme {
